# Universal-Ai-Chat-Platform-

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  LICENSE  README.md  RUN_ME_FIRST.txt  SECURITY.md  SECURITY_FIXES.md  STARTUP_FIX_SUMMARY.md  TROUBLESHOOTING.md  pyproject.toml  requirements.txt  run.bat  start.bat  start.py  start.sh  start_debug.py  test_chat.py
.github/workflows/: ci.yml
backend/: __init__.py  alembic.ini  api.py  auth.py  config.py  database.py  document.py  llm.py  main.py  models.py  prompt_injection.py  ratelimit.py  ratelimit_redis.py  requirements-dev.txt  requirements.txt  schemas.py  security.py  websearch.py
backend/history/: nexus.db
backend/middleware/: __init__.py  request_id.py
backend/migrations/: env.py
backend/migrations/versions/: c20ebb48dbfe_initial_schema.py
backend/providers/: __init__.py  anthropic.py  base.py  compat.py  gemini.py  inaccessible.py  key_resolver.py  litellm_fallback.py  model_discovery.py  nvidia.py  ollama.py  openai_compatible.py  registry.py
backend/skills/: __init__.py  api_skills.py  executor.py  models.py  registry.py  router.py
config/: providers.yaml
config/skills/api-design/: SKILL.md
config/skills/coding-standards/: SKILL.md
config/skills/web-search/: SKILL.md
docs/: PR-PLAN-security-hardening-v1.1.md
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js
frontend/js/core/: state.js
frontend/js/features/auth/: auth.js
frontend/js/features/chat/: chat.js
frontend/js/features/documents/: documents.js
frontend/js/features/models/: models.js
frontend/js/features/settings/: settings.js
frontend/js/features/sidebar/: sidebar.js
frontend/js/features/skills/: skills.js
frontend/js/shared/: constants.js  dom.js  http.js  markdown.js  toast.js  utils.js
scripts/: generate_master_key.py
tests/: conftest.py  test_auth.py  test_document.py  test_model_fetch.py  test_model_selection.py  test_schemas.py  test_skill_registry.py  test_skills.py  test_startup.py  test_streaming.py  test_websearch.py
tests/integration/: test_api_auth.py  test_api_chat.py  test_api_models.py  test_security.py
